# L3R-seq

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  L3Rseq  README.md  Snakefile  config.sh  config.yaml  docker-compose.yml  l3rseq-docker  pyproject.toml
.devcontainer/: devcontainer.json
UMIC-seq_L3Rseq/: ATTRIBUTION.md  UMIC-seq_fastq_v2.py
docs/: HANDOFF_sudo_restriction.md  PIPELINE_MODERNIZATION.md  REVIEW_firewall_hardening.md  _config.yml  adaptation.md  advanced.md  api.md  auth.md  code-overview.md  development.md  improvements.md  index.md  parallel_step04_rollout_plan.md  pipeline_fast_storage_plan.md  pipeline_speed_investigation.md  rep3_comparison_limitations.md  requirements.md  snakemake_skip_correct.md  step09_baseline.md  step09_phase1b_comparison.md  testing.md  troubleshooting.md  umic_seq_speedup_plan.md  viewer-verification.md
examples/: LibCheck_sample.sh  run_pipeline.sh  run_pipeline_with_rpi_filter.sh  run_with_snakemake.sh
igv_viewer/: config.js  genes.html  index.html  inspect.js  package-lock.json  package.json  pileup.js  screenshot.js  server.js  test_buttons.js  test_stress.js  umi.html
longread_umi_L3Rseq/: ATTRIBUTION.md  longread_umi.sh
runs/: LibCheck_sample.sh  README.md
scripts/: 01_concat.sh  02_trim.sh  03_demultiplex.sh  04_umi.sh  05_consensus.sh  06_extract.sh  07_map.sh  08_variants.sh  09_tail_correct.sh  09a_parse_cigar.sh  09c_walk_correction.sh  09d_rebuild_cigar.sh  09e_call_variants.sh  09f_splice_check.sh  10_export_csv.sh  (+10 more)
(+139 files in other folders)
