[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "l3rseq"
version = "0.1.0"
description = "Python algorithmic core for the L3Rseq nanopore UMI pipeline"
requires-python = ">=3.12"
dependencies = [
    "pysam>=0.22",
    "biopython>=1.84",
    "pyranges>=0.1",
    "pandas>=2",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/l3rseq"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/l3rseq"]

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["src"]
